added heroku remote

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
       </div>
 
       <div>
-        <button class="signup">
+        <button class="signup" (click)="navigateToCreateAccount()">
           Signup
         </button>
       </div>
