--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -83,8 +83,8 @@
           </p>
         </div>
         <div>
-          <button class="btn_getStarted" (click)="navigateToCreateAccount()">
-            Signup
+          <button class="btn_getStarted" (click)="navigateToLogin()">
+            Login
           </button>
         </div>
       </div>
@@ -94,16 +94,17 @@
       <!-- Form Section -->
 
       <div class="center_form">
-        <div class="login_form_div pt-5">
+
+        <div class="login_form_div">
 
           <!-- Login Form Title -->
 
           <div class="form_title">
             <h1 class="create_acc_text">
-              Login
+              Create an account
             </h1>
             <p>
-              Sign in with your username or email <br> and password
+              Lets onboard you so we will know who you are, it will only take a minute.
             </p>
           </div>
 
@@ -112,16 +113,42 @@
           <!-- Login Form Inputs -->
 
           <div class="login_inputs">
-            <form action="">
+            <form novalidate (ngSubmit)="submitSignUpForm()" [formGroup]="signupForm">
 
               <div class="input_div">
-                <span class="formLabel"> Username </span>
-                <input type="text" name="" id="" placeholder="Username">
+                <span class="formLabel"> First Name </span>
+                <input type="text" id="" placeholder="First Name" formControlName="firstname">
+                <span *ngIf="signupForm.get('firstname').touched && signupForm.get('firstname').errors">
+                  <ul *ngFor="let error of signupForm.get('firstname').errors">
+                    <li
+                  </ul>
+                  <p *ngIf="signupForm.get('firstname').errors?.required" class="text-danger">Please enter your firstname</p>
+                </span>
+              </div>
+
+              <div class="input_div">
+                <span class="formLabel"> Last Name </span>
+                <input type="text" id="" placeholder="Last Name" formControlName="lastname">
+              </div>
+
+              <div class="input_div">
+                <span class="formLabel"> Phone </span>
+                <input type="text" id="" placeholder="+2340000000000" formControlName="phoneNumber">
+              </div>
+
+              <div class="input_div">
+                <span class="formLabel"> Email </span>
+                <input type="email" id="" placeholder="Email Address" formControlName="email">
               </div>
 
               <div class="input_div">
                 <span class="formLabel"> Password </span>
-                <input type="password" name="" id="" placeholder="Password">
+                <input type="password" id="" placeholder="Password" formControlName="password">
+              </div>
+
+              <div class="input_div">
+                <span class="formLabel"> Confirm Password </span>
+                <input type="password" id="" placeholder="Confirm Password" formControlName="confirmPassword">
               </div>
 
               <!-- <div class="btn_full_width green_btn">
@@ -131,11 +158,13 @@
                         </div> -->
 
               <div class="btn_below_link">
-                <div class="forButton">
-                  <a href="#">Login</a>
+
+                <div class="forLink prev_color">
+                  <a href="#">Previous</a>
                 </div>
-                <div class="forLink">
-                  <a href="#">Forgot Password?</a>
+
+                <div class="forButton">
+                  <button class="btn btn1" type="submit" [disabled]="!signupForm.valid" href="#">Signup</button>
                 </div>
               </div>
 
@@ -143,10 +172,14 @@
 
             </form>
           </div>
-
+          <br>Dirty: {{signupForm.dirty}}
+          <br>Touched: {{signupForm.touched}}
+          <br>Valid: {{signupForm.valid}}
+          <br>Value: {{signupForm.value | json}}
           <!--  -->
 
         </div>
+
       </div>
 
       <!--  -->
