--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="left">
 
       <div class="logo">
-        <img src="../assets/images/logo.png" alt="">
+        <img src="../../assets/images/logo.png" alt="">
       </div>
 
       <div class="header_title">
@@ -64,7 +64,7 @@
       <div class="each_service">
         <div class="service_icon">
           <div>
-            <img src="../assets/icons/service1.png" alt="">
+            <img src="../../assets/icons/service1.png" alt="">
           </div>
         </div>
 
@@ -83,7 +83,7 @@
       <div class="each_service">
         <div class="service_icon">
           <div>
-            <img src="../assets/icons/service2.png" alt="">
+            <img src="../../assets/icons/service2.png" alt="">
           </div>
         </div>
 
@@ -103,7 +103,7 @@
       <div class="each_service">
         <div class="service_icon">
           <div>
-            <img src="../assets/icons/service3.png" alt="">
+            <img src="../../assets/icons/service3.png" alt="">
           </div>
         </div>
 
@@ -131,7 +131,7 @@
 
   <div class="third_up">
     <div class="up_left">
-      <img src="../assets/images/up.png" alt="">
+      <img src="../../assets/images/up.png" alt="">
     </div>
     <div class="up_right">
       <h4>
@@ -159,7 +159,7 @@
       </p>
     </div>
     <div class="up_left">
-      <img src="../assets/images/down.png" alt="">
+      <img src="../../assets/images/down.png" alt="">
     </div>
 
   </div>
@@ -294,7 +294,7 @@
       <div class="ft_1">
 
         <div class="icon_img">
-          <img src="../assets/icons/v3.png" alt="">
+          <img src="../../assets/icons/v3.png" alt="">
         </div>
 
         <div class="download_inst">
@@ -306,7 +306,7 @@
       </div>
       <div class="ft_2">
         <div class="icon_img">
-          <img src="../assets/icons/v2.png" alt="">
+          <img src="../../assets/icons/v2.png" alt="">
         </div>
 
         <div class="download_inst">
@@ -317,7 +317,7 @@
       </div>
       <div class="ft_3">
         <div class="icon_img">
-          <img src="../assets/icons/v1.png" alt="">
+          <img src="../../assets/icons/v1.png" alt="">
         </div>
 
         <div class="download_inst">
