--- a/src/app/confirm-otp/confirm-otp.component.html
+++ b/src/app/confirm-otp/confirm-otp.component.html
@@ -160,7 +160,7 @@
                 </div>
 
                 <div class="forButton">
-                  <button type="submit" [disabled]="!confirmOtpForm.valid" (click)="confirmOtp()" href="#">
+                  <button type="submit" [disabled]="!confirmOtpForm.valid" (click)="confirmOtp()">
                     Confirm OTP
                   </button>
                 </div>
