--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -112,16 +112,30 @@
           <!-- Login Form Inputs -->
 
           <div class="login_inputs">
-            <form action="">
+            <form novalidate [formGroup]="loginForm" (ngSubmit)="submitLoginForm()">
 
               <div class="input_div">
                 <span class="formLabel"> Username </span>
-                <input type="text" name="" id="" placeholder="Username">
+                <input type="text" id="" placeholder="Username" formControlName="userName">
+                <span *ngIf="userName.invalid && (userName.dirty || userName.touched)">
+                  <ul>
+                    <li *ngIf="userName.errors.required" class="text-danger">
+                      Please input username
+                    </li>
+                  </ul>
+                </span>
               </div>
 
               <div class="input_div">
                 <span class="formLabel"> Password </span>
-                <input type="password" name="" id="" placeholder="Password">
+                <input type="password" id="" placeholder="Password" formControlName="password">
+                <span *ngIf="password.invalid && (password.dirty || password.touched)">
+                  <ul>
+                    <li *ngIf="password.errors.required" class="text-danger">
+                      Please input password
+                    </li>
+                  </ul>
+                </span>
               </div>
 
               <!-- <div class="btn_full_width green_btn">
@@ -132,7 +146,7 @@
 
               <div class="btn_below_link">
                 <div class="forButton">
-                  <a href="#">Login</a>
+                  <button type="submit" [disabled]="!loginForm.valid">Login</button>
                 </div>
                 <div class="forLink">
                   <a href="#">Forgot Password?</a>
