worked on dashboard and get fixed income funds

--- a/src/app/confirm-otp/confirm-otp.component.html
+++ b/src/app/confirm-otp/confirm-otp.component.html
@@ -139,7 +139,7 @@
                   <div class="right">
 
                     <p>
-                      Did not get code. <span>Resend?</span>
+                      Did not get code? <span><a href='#'>Resend</a></span>
                     </p>
 
                   </div>
